# rust_2048

./: Cargo.toml
src/: main.rs
src/lib/: board.rs  draw.rs  mod.rs
