[package]
name = "rust_2048"
version = "0.1.0"
authors = ["Guido Fioravantti <guido.fioravantti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1.8"
ncurses = "5.86.0"
termion = "1.5"
tui = "0.14"
